--- a/documentation/app/components/preview-block/index.hbs
+++ b/documentation/app/components/preview-block/index.hbs
@@ -2,7 +2,7 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<div class="doc-PreviewBlock">
+<div class="doc-preview-block">
   {{yield (hash Preview=(component "preview-block/preview"))}}
   {{yield (hash Code=(component "preview-block/code"))}}
 </div>
