--- a/documentation/app/templates/components/list-item-template.hbs
+++ b/documentation/app/templates/components/list-item-template.hbs
@@ -17,8 +17,8 @@
   <T.Tab>Anatomy</T.Tab>
   <T.Tab>Code</T.Tab>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <h2 id="usage">Usage</h2>
 
         <h3 id="when-to-use">When to use</h3>
@@ -176,8 +176,8 @@
     </div>
   </T.Panel>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <h2 id="type">Type</h2>
         <div class="doc-list-item-template-types">
           <p>Large <br />(Desktop)</p>
@@ -202,7 +202,7 @@
           </Cut::ListItem::Template>
           <p>Small<br />(Mobile)</p>
           <Cut::ListItem::Template
-            class="doc-list-item-template-types_small"
+            class="doc-list-item-template-types-small"
             as |T|
           >
             <T.Section as |Section|>
@@ -283,8 +283,8 @@
     </div>
   </T.Panel>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <h2 id="how-to-use">How to use this component</h2>
         <p>The List Item Template is composed of several contextual components.
           Primarily the Section, followed by an optional Badge or Icon and a
