--- a/documentation/app/templates/components/list-item.hbs
+++ b/documentation/app/templates/components/list-item.hbs
@@ -20,8 +20,8 @@
   <T.Tab>Guidelines</T.Tab>
   <T.Tab>Code</T.Tab>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <h2 id="usage">Usage</h2>
         <h3 id="when-to-use">When to use</h3>
         <ul>
@@ -219,8 +219,8 @@
     </div>
   </T.Panel>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <h2 id="how-to-use">How to use this component</h2>
         <p>To make invocation more flexible, we provide contextual components
           for content, and different optional actions. The most basic invocation
