--- a/documentation/app/templates/components/service-instance-list-item.hbs
+++ b/documentation/app/templates/components/service-instance-list-item.hbs
@@ -16,8 +16,8 @@
   <T.Tab>About</T.Tab>
   <T.Tab>Code</T.Tab>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <h2 id="about">About</h2>
         <p>The Service Instance List Item is a wrapper around the
           <Hds::Link::Inline @route="components.list-item">List Item</Hds::Link::Inline>
@@ -121,8 +121,8 @@
 
   </T.Panel>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <h2 id="component-api">Component API</h2>
         <p>The Service Instance List Item is composed with the List Item and the
           List Item Template. It accepts all the arguments that the List Item
