--- a/documentation/app/templates/index.hbs
+++ b/documentation/app/templates/index.hbs
@@ -9,8 +9,8 @@
   <T.Tab>Support</T.Tab>
   <T.Tab>Contributing</T.Tab>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <p>Consul UI Toolkit is a collection of presentational components and
           utilities specifically meant to be shared across the different Consul
           applications. The toolkit contains generic components that you may
@@ -43,8 +43,8 @@
   </T.Panel>
   <T.Panel>
 
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <Hds::Alert @type="inline" @color="highlight" as |A|>
           <A.Title>
             Many resources and links on this page are only available to
@@ -78,8 +78,8 @@
     </div>
   </T.Panel>
   <T.Panel>
-    <div class="doc-Page">
-      <div class="doc-Page-content">
+    <div class="doc-page">
+      <div class="doc-page-content">
         <Hds::Alert @type="inline" @color="highlight" as |A|>
           <A.Title>At this time we are not accepting external contributions from
             non-HashiCorp employees. Many resources and links on this page are
