--- a/documentation/app/components/in-page-nav/link.hbs
+++ b/documentation/app/components/in-page-nav/link.hbs
@@ -2,6 +2,6 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<li class="doc-InPageNav-link doc-InPageNav-link--depth-{{or @depth '1'}}">
+<li class="doc-in-page-nav-link doc-in-page-nav-link-depth-{{or @depth '1'}}">
   <a href={{or @section "#"}}>{{yield}}</a>
 </li>
