--- a/documentation/app/styles/components/in-page-nav.scss
+++ b/documentation/app/styles/components/in-page-nav.scss
@@ -2,14 +2,14 @@
  * Copyright (c) HashiCorp, Inc.
  */
 
-.doc-InPageNav {
+.doc-in-page-nav {
   display: none;
   width: 240px;
   align-self: start;
   position: sticky;
   top: 3rem;
 
-  .doc-InPageNav-label {
+  .doc-in-page-nav-label {
     margin-bottom: 1.09rem;
   }
 
@@ -21,16 +21,23 @@
     margin-top: 0;
 
     li {
-      border-left: 3px solid rgba(0, 0, 0, 0);
+      border-left: 3px solid rgb(0 0 0 / 0%);
       line-height: var(--token-typography-display-500-line-height);
       margin-bottom: 0.5rem;
 
-      &.doc-InPageNav-link--depth-1 {
+      &.doc-in-page-nav-link-depth-1 {
         padding-left: 0.75rem;
       }
 
-      &.doc-InPageNav-link--depth-2 {
+      &.doc-in-page-nav-link-depth-2 {
         padding-left: 1.5rem;
+      }
+
+      a {
+        color: var(--token-color-foreground-faint);
+        text-decoration: none;
+        display: inline-block;
+        width: 100%;
       }
 
       &:hover {
@@ -40,17 +47,10 @@
           color: black;
         }
       }
-
-      a {
-        color: var(--token-color-foreground-faint);
-        text-decoration: none;
-        display: inline-block;
-        width: 100%;
-      }
     }
   }
 
-  @media screen and (min-width: 1500px) {
+  @media screen and (width >= 1500px) {
     display: flex;
     flex-direction: column;
   }
