--- a/documentation/app/styles/components/preview-block.scss
+++ b/documentation/app/styles/components/preview-block.scss
@@ -2,12 +2,33 @@
  * Copyright (c) HashiCorp, Inc.
  */
 
-.doc-PreviewBlock {
+// Keeping this outside the preview-block scope because so we can easily
+// differentiate <CodeBlock />s that are outside a <PreviewBlock />.
+// Primarily useful for code blocks that are 1 line in length. We may have
+// to revisit if we start having preview blocks that are also one line.
+.code-toolbar > .toolbar > .toolbar-item > .copy-to-clipboard-button {
+  border: 1px solid transparent;
+  margin: 0.63rem 0.63rem 0 0;
+  color: var(--token-color-foreground-high-contrast);
+  padding: 1px 7px;
+  background-color: var(--token-color-foreground-action);
+  border-radius: var(--token-form-control-border-radius);
+  font-size: var(--token-typography-display-200-font-size);
+  font-weight: var(--token-typography-font-weight-regular);
+  line-height: var(--token-typography-display-200-line-height);
+  font-family: var(--token-typography-font-stack-text);
+
+  &:hover {
+    background-color: var(--token-color-foreground-action-hover);
+  }
+}
+
+.doc-preview-block {
   display: flex;
   flex-direction: column;
   margin-bottom: 3rem;
 
-  > .doc-PreviewBlock-content {
+  > .doc-preview-block-content {
     padding: 2rem;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 2'%3E%3Cpath d='M1 2V0h1v1H0v1z' fill-opacity='.05'/%3E%3C/svg%3E");
     background-size: 16px 16px;
@@ -32,26 +53,5 @@
     > .toolbar > .toolbar-item > .copy-to-clipboard-button {
       margin: 1rem 1rem 0 0;
     }
-  }
-}
-
-// Keeping this outside the preview-block scope because so we can easily
-// differentiate <CodeBlock />s that are outside a <PreviewBlock />.
-// Primarily useful for code blocks that are 1 line in length. We may have
-// to revisit if we start having preview blocks that are also one line.
-.code-toolbar > .toolbar > .toolbar-item > .copy-to-clipboard-button {
-  border: 1px solid transparent;
-  margin: 0.63rem 0.63rem 0 0;
-  color: var(--token-color-foreground-high-contrast);
-  padding: 1px 7px;
-  background-color: var(--token-color-foreground-action);
-  border-radius: var(--token-form-control-border-radius);
-  font-size: var(--token-typography-display-200-font-size);
-  font-weight: var(--token-typography-font-weight-regular);
-  line-height: var(--token-typography-display-200-line-height);
-  font-family: var(--token-typography-font-stack-text);
-
-  &:hover {
-    background-color: var(--token-color-foreground-action-hover);
   }
 }
