--- a/documentation/app/styles/pages/list-item-template.scss
+++ b/documentation/app/styles/pages/list-item-template.scss
@@ -12,11 +12,10 @@
 .doc-list-item-template-types {
   display: grid;
   grid-template-columns: auto 1fr;
-  column-gap: 2rem;
+  gap: 1rem 2rem;
   align-items: start;
-  row-gap: 1rem;
 
-  .doc-list-item-template-types_small {
+  .doc-list-item-template-types-small {
     max-width: 260px;
   }
 
