--- a/toolkit/src/components/cut/metadata/external-source/index.hbs
+++ b/toolkit/src/components/cut/metadata/external-source/index.hbs
@@ -3,7 +3,7 @@
 }}
 
 {{#if @externalSource}}
-  <!-- TODO: add translation(CC-5314) -->
+  {{!-- TODO: add translation(CC-5314) --}}
   <Cut::TextWithIcon
     @text={{concat "Registered via " this.externalSourceText}}
     @icon={{this.externalSourceIcon}}
