Disable a11y refocus on sidenav

--- a/documentation/app/templates/application.hbs
+++ b/documentation/app/templates/application.hbs
@@ -5,7 +5,7 @@
 {{page-title "Consul UI Toolkit"}}
 
 <div class="application">
-  <Hds::SideNav>
+  <Hds::SideNav @hasA11yRefocus={{false}}>
     <:header>
       <Hds::SideNav::Header>
         <:logo>
