chore: upgrade hds and remove FlightIcon

--- a/documentation/app/components/list-item/index.hbs
+++ b/documentation/app/components/list-item/index.hbs
@@ -214,7 +214,7 @@
             />
             <Cut::TextWithIcon @text="partition-1" @icon="users" />
             <span />
-            <FlightIcon @name="network-alt" @size="16" />
+            <Hds::Icon @name="network-alt" @size="16" />
             <span />
             <Cut::TextWithIcon
               @text="Web"
