--- a/documentation/app/templates/components/list-item-template.hbs
+++ b/documentation/app/templates/components/list-item-template.hbs
@@ -785,7 +785,7 @@
           The
           <CodeInline @code="Icon" />
           contextual component renders a
-          <CodeInline @code="<FlightIcon />" />
+          <CodeInline @code="<Hds::Icon />" />
           from HDS. Therefore it shares the same API. Reference the
           <Hds::Link::Inline
             @href="https://helios.hashicorp.design/icons/usage-guidelines?tab=code#how-to-use-icons"
@@ -836,7 +836,7 @@
           <CodeInline @code="Icon" />
           contextual component is used as an optional separator between the two
           <CodeInline @code="Sections" />. It renders a
-          <CodeInline @code="<FlightIcon />" />
+          <CodeInline @code="<Hds::Icon />" />
           from HDS. Therefore it shares the same API. Reference the
           <Hds::Link::Inline
             @href="https://helios.hashicorp.design/icons/usage-guidelines?tab=code#how-to-use-icons"
