--- a/documentation/app/templates/components/list-item.hbs
+++ b/documentation/app/templates/components/list-item.hbs
@@ -117,7 +117,7 @@
           standard HDS button (small), and HDS “toggle icon” to allow users to
           open a dropdown to select common values (edit, delete, etc). You can
           also add your own custom action if wanted, the most common use-case
-          being a flight icon (which is the default custom value). You can
+          being a hds icon (which is the default custom value). You can
           however change this to any icon or component you would like. We
           recommend only using one action per List Item.
         </p>
@@ -151,7 +151,7 @@
               <p>content placeholder</p>
             </L.Content>
             <L.ActionGeneric>
-              <FlightIcon
+              <Hds::Icon
                 @name="hexagon"
                 @color="var(--token-color-foreground-action)"
                 @size="24"
@@ -429,7 +429,7 @@
                 List Item with custom content using generic contextual component
               </L.Content>
               <L.ActionGeneric>
-                <FlightIcon
+                <Hds::Icon
                   @name="hexagon"
                   @color="var(--token-color-foreground-action)"
                   @size="24"
@@ -444,7 +444,7 @@
                 List Item with custom content using generic contextual component
               </L.Content>
               <L.ActionGeneric>
-                <FlightIcon
+                <Hds::Icon
                   @name="hexagon"
                   @color="var(--token-color-foreground-action)"
                   @size="24"
