--- a/toolkit/src/components/cut/copy-block/index.hbs
+++ b/toolkit/src/components/cut/copy-block/index.hbs
@@ -14,7 +14,7 @@
         ''
       }}
     >
-      <FlightIcon
+      <Hds::Icon
         @name={{if
           this.isSuccessfullyCopied
           'clipboard-checked'
