--- a/toolkit/src/components/cut/list-item/template/index.hbs
+++ b/toolkit/src/components/cut/list-item/template/index.hbs
@@ -8,7 +8,7 @@
     {{yield
       (hash
         Badge=(component 'hds/badge' size='small')
-        Icon=(component 'flight-icon' size=16)
+        Icon=(component 'hds/icon' size=16)
       )
     }}
   </div>
