--- a/toolkit/src/components/cut/list-item/section/index.hbs
+++ b/toolkit/src/components/cut/list-item/section/index.hbs
@@ -4,7 +4,7 @@
 
 <div class='cut-list-item-section' ...attributes>
   <div class='cut-list-item-section__title-row'>
-    {{yield (hash Icon=(component 'flight-icon' size='16'))}}
+    {{yield (hash Icon=(component 'hds/icon' size='16'))}}
     {{yield (hash Title=(component 'cut/list-item/section/title'))}}
   </div>
   {{yield (hash Metadata=(component 'cut/list-item/section/metadata'))}}
