--- a/toolkit/src/components/cut/text-with-icon/index.hbs
+++ b/toolkit/src/components/cut/text-with-icon/index.hbs
@@ -6,7 +6,7 @@
   class='cut-text-with-icon hds-typography-body-100 hds-font-weight-regular'
   ...attributes
 >
-  <FlightIcon @name={{@icon}} @color={{@iconColor}} />
+  <Hds::Icon @name={{@icon}} @color={{@iconColor}} />
   <div>{{@text}}</div>
   {{#if @connection}}
     <div class='cut-text-with-icon__connection'>{{@connection}}</div>
